--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title><strong>SiteArt</strong></title>
+    <title>SiteArt</title>
   </head>
   <body>
     <noscript>
